syntax = "proto3";

package protos;

message CassandraStoreParams {
    repeated string hosts = 1;
    string keyspace = 2;    
    string verticesTable = 3;
    string edgesTable = 4;
    BatchOptions batchOptions = 5;
    int64 timeout = 6; // milliseconds

    message BatchOptions {
        int32 MaxSize = 1;
        int32 MaxBytes = 2;
    }
}

message CassandraTokenRange {
    string partitioner = 1;
    string startToken = 2;
    string endToken = 3;
}
